@startuml Diagrama_Clases_seccion1
!theme plain

' Sección 1: Interfaz de usuario, jugador y armas (+ datos)

package "Datos (ScriptableObject)" {
    class PlayerClass {
        - className: string
        - maxHealth: int
        - speed: float
        - startingWeaponData: WeaponData
    }

    class WeaponData {
        - weaponName: string
        - damage: int
        - weaponPrefab: GameObject
        - rarity: int
    }
}

package "Jugador" {
    class PlayerController {
        - animator: Animator
        - rigidbody: Rigidbody2D
        - velocity: Vector3
        - isInvulnerable: bool
        - playerClass: PlayerClass
        - speed: float
        - baseSpeed: float
        - weaponOffset: Vector3
        + Initialize()
        + TakeDamage(amount: int)
        + Die()
        + Dodge()
        + ApplySpeedMultiplier(multiplier: float)
        + Update()
        + Move(direction: Vector2)
    }

    class PlayerHealth {
        - currentHealth: int
        - maxHealth: int
        - lastDamageTime: float
        - invulnerabilityCooldown: float
        + Initialize()
        + TakeDamage(amount: int)
        + Heal(amount: int)
        + Die()
        + IsAlive(): bool
    }

    class PlayerSpawner {
        - playerPrefab: GameObject
        - spawn: Transform
        - player: GameObject
        + SpawnPlayer()
    }
}

package "Armas" {
    class Weapon {
        - spriteRenderer: SpriteRenderer
        - weaponData: WeaponData
        - camera: Camera
        - isInitialized: bool
        - attackWhileHeld: bool
        # Start()
        + Initialize()
        + Attack()
        # OrbitAroundPlayer()
        # RotateTowardsMouse()
        # Update()
    }

    class MeleeWeapon {
        - attackRange: float
        - attackCooldown: float
        - lastAttackTime: float
        + Attack()
        - DetectEnemiesInRange(): Enemy[]
    }

    class RangedWeapon {
        - projectilePrefab: GameObject
        - fireRate: float
        - lastShotTime: float
        + Attack()
        - CreateProjectile(direction: Vector2)
    }

    class Projectile {
        - damage: int
        - speed: float
        - lifetime: float
        - desiredPixelSize: int
        - rb: Rigidbody2D
        + Start()
        + OnTriggerEnter2D(collision: Collider2D)
    }
}

package "Interfaz de Usuario" {
    class MainMenuManager {
        - playButton: Button
        - quitButton: Button
        - highScoresUI: HighScoresUI
        + Start()
        + OnPlayClicked()
        + OnQuitClicked()
        + DisplayHighScores()
    }

    class ClassSelectionManager {
        - {static} SelectedClass: PlayerClass
        - classButtons: List<Button>
        - classData: List<PlayerClass>
        + SelectClass(classIndex: int)
        + {static} GetSelectedClass(): PlayerClass
    }

    class HealthUI {
        - heartPrefab: GameObject
        - heartsContainer: Transform
        - playerHealth: PlayerHealth
        + UpdateHealth(current: int, max: int)
        + UpdateHeartDisplay()
    }
}

PlayerController --> PlayerClass
PlayerController --> PlayerHealth
PlayerController --> Weapon
PlayerSpawner --> PlayerController

Weapon --> WeaponData
MeleeWeapon --|> Weapon
RangedWeapon --|> Weapon
RangedWeapon --> Projectile

MainMenuManager --> ClassSelectionManager
ClassSelectionManager --> PlayerClass
HealthUI --> PlayerHealth

@enduml
